parameteried 3-index html

--- a/0x02-i18n/templates/3-index.html
+++ b/0x02-i18n/templates/3-index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en_US">
+<html lang="">
     <head>
-        <title>{{_(Welcome to Holberton)}}</title>
+        <title>{{_(title)}}</title>
     </head>
     <body>
-        <h1>{{_(Hello world)}}</h1>
+        <h1>{{_(greet)}}</h1>
     </body>
 </html>
