edit 3-index html

--- a/0x02-i18n/templates/3-index.html
+++ b/0x02-i18n/templates/3-index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
     <head>
-        <title>{{_(title)}}</title>
+        <meta charset="UTF-8">
+        <title>{{_('title')}}</title>
     </head>
     <body>
-        <h1>{{_(greet)}}</h1>
+        <h1>{{_('greet')}}</h1>
     </body>
 </html>
