edit 3-index html

--- a/0x02-i18n/templates/3-index.html
+++ b/0x02-i18n/templates/3-index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>{{_('title')}}</title>
+        <title>{{_('%(title)s', title=title)}}</title>
     </head>
     <body>
-        <h1>{{_('greet')}}</h1>
+        <h1>{{_('%(greet)s', greet=greet)}}</h1>
     </body>
 </html>
